remove heing in blocks to avoid non-visibility if add item block

--- a/style.css
+++ b/style.css
@@ -290,10 +290,6 @@ ul {
   .custom-scroll {
     max-height: 19vh;
   }
-
-  .drag-column {
-    max-height: 44vh;
-  }
 }
 
 /* Media Query: Large Smartphone (Vertical) */
